# kmer_rust

./: Cargo.toml  README.md
benches/: fastq_to_fasta.rs  kmer_bench.rs
src/: io_utils.rs  kmer.rs  lib.rs  main.rs
tests/: conversion.rs
